fix paragraph in footer overlapping buttons

--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,7 @@ footer li {
 
 footer p {
 	position: absolute;
+	z-index: -1;
 	
 	margin: 0px;
 	margin-left: 100px;
